--- a/mods/ts/3dtest/weapons.yaml
+++ b/mods/ts/3dtest/weapons.yaml
@@ -300,6 +300,26 @@ SilencerSniper:
 			Concrete: 5
 		DamageTypes: Prone70Percent, TriggerProne, BulletDeath
 
+Sniper:
+	Inherits: SilencerSniper
+	ReloadDelay: 60
+	Range: 10c862
+	Report: silencer.aud
+	Warhead@1Dam: SpreadDamage
+		Spread: 36
+		Damage: 15000
+		Versus:
+			Wood: 5
+			Light: 5
+			Heavy: 5
+			Concrete: 5
+		DamageTypes: Prone100Percent, TriggerProne, BulletDeath
+	Warhead@2Eff: CreateEffect
+		Explosions: piff
+	Warhead@3EffWater: CreateEffect
+		Explosions: water_piff
+
+
 Pistol:
 	Inherits: InfMG
 	MinRange: 0
