--- a/mods/ts/rules/nod-vehicles.yaml
+++ b/mods/ts/rules/nod-vehicles.yaml
@@ -542,7 +542,7 @@ STNK:
 		InitialStanceAI: ReturnFire
 	-MustBeDestroyed:
 	Explodes:
-		RequiresCondition: !rank-elite
+		RequiresCondition: !rank-elite && !traped
 	Explodes@ELITE:
-		RequiresCondition: rank-elite
+		RequiresCondition: rank-elite && !traped
 		Weapon: UnitExplode
