--- a/mods/ts/maps/sunstroke/rules.yaml
+++ b/mods/ts/maps/sunstroke/rules.yaml
@@ -18,8 +18,20 @@ World:
 		RedTint: 1.6
 		GreenTint: 1.2
 		BlueTint: 0.9
-		Intensity: 0.3
+		Intensity: 0.35
 		HeightStep: 0.002
+		AmbientIntensity: 0.12
+
+^VoxelActor:
+	BodyOrientation:
+		QuantizedFacings: 0
+	RenderModels:
+		NormalsPalette: normals
+		ShadowPalette: shadow
+		Scale: 1.4
+		LightScale: 0.6
+		SpecularScale: 0.15
+	WithModelBody:
 
 GAOLDCC2:
 	CaptureManager:
